SonarLint issues fix